Change nav and h1 color to black to avoid contrast issues

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,13 +25,13 @@ nav a {
     display: block;
     padding: 0.5rem;
     text-decoration: none;
-    color: white;
+    color: #000;
     font-size: 1.2rem;
     font-weight: 700;
 }
 
 h1 {
-    color: steelblue;
+    color: #000;
     border-bottom: 1px solid steelblue;
 }
 
